add download button with pdf of resume

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1>Dustin Engle</h1>
       <div class="container">
         <div class="row">
-          <div class="col-sm-12 col-md-6">
+          <div class="col-sm-5 col-md-4">
             <div>
               <a href="mailto:dustin.engle@gmail.com">dustin.engle@gmail.com</a>
             </div>
@@ -24,13 +24,16 @@
               <a href="https://maps.app.goo.gl/kuEKxD7GrsdUWPBY6" target="_blank">Bishop, CA</a>
             </div>
           </div>
-          <div class="col-sm-12 col-md-6">
+          <div class="col-sm-4 col-md-4">
             <div>
               <a href="https://linkedin.com/in/dustin-engle3" target="_blank">LinkedIn</a>
             </div>
             <div>
               <a href="https://github.com/dustinengle" target="_blank">GitHub</a>
             </div>
+          </div>
+          <div class="col-sm-3 col-md-4">
+            <a class="btn btn-success" href="resume.pdf" target="_blank">Download</a>
           </div>
         </div>
       </div>
@@ -400,27 +403,27 @@
       <div class="row">
         <div class="col-sm-12 col-md-4">
           <h4>Languages:</h4>
-          <p>Bash, C, C++, C#, CSS, Dart, Go, Java, JavaScript, PHP, Python, Rust, SASS, TypeScript, V, Visual Basic</p>
+          <p class="fs-6 lh-1">Bash, C, C++, C#, CSS, Dart, Go, Java, JavaScript, PHP, Python, Rust, SASS, TypeScript, V, Visual Basic</p>
           <h4>Databases:</h4>
-          <p>Access, Badger, LevelDB, MariaDB, Milvus, MongoDB, MS SQL, MySQL, Pinecone, PostgreSQL, Redis, SQLite3, Supabase</p>
+          <p class="fs-6 lh-1">Access, Badger, LevelDB, MariaDB, Milvus, MongoDB, MS SQL, MySQL, Pinecone, PostgreSQL, Redis, SQLite3, Supabase</p>
           <h4>Providers:</h4>
-          <p>AWS, Azure, GCP, Heroku, Hetzner, Linode, Oracle, Scaleway</p>
+          <p class="fs-6 lh-1">AWS, Azure, GCP, Heroku, Hetzner, Linode, Oracle, Scaleway</p>
         </div>
         <div class="col-sm-12 col-md-4">
           <h4>UIs:</h4>
-          <p>Angular, Bootstrap, Expo, Flutter, HTML, Ionic, jQuery, QT, React, React Native, Tkinter, Vue, WinForms</p>
+          <p class="fs-6 lh-1">Angular, Bootstrap, Expo, Flutter, HTML, Ionic, jQuery, QT, React, React Native, Tkinter, Vue, WinForms</p>
           <h4>Frameworks:</h4>
-          <p>CodeIgniter, FastAPI, Flask, Gin, Laravel, Meteor, Micronaut, .NET, Spring Boot, Vert.x</p>
+          <p class="fs-6 lh-1">CodeIgniter, FastAPI, Flask, Gin, Laravel, Meteor, Micronaut, .NET, Spring Boot, Vert.x</p>
           <h4>Concepts:</h4>
-          <p>Agile, CI/CD, Kanban, KPI, OKR, Scrum, TDD, XP</p>
+          <p class="fs-6 lh-1">Agile, CI/CD, Kanban, KPI, OKR, Scrum, TDD, XP</p>
         </div>
         <div class="col-sm-12 col-md-4">
           <h4>AI:</h4>
-          <p>CUDA, DLib, Keras, ONNX, OpenAI, OpenCV, PyTorch, scikit-learn, TensorFlow, Tesseract, TFLite, Ultralytics</p>
+          <p class="fs-6 lh-1">CUDA, DLib, Keras, ONNX, OpenAI, OpenCV, PyTorch, scikit-learn, TensorFlow, Tesseract, TFLite, Ultralytics</p>
           <h4>Blockchains:</h4>
-          <p>Bitcoin, ChainLink, Cosmos SDK, Custom, Ethereum, PIVX, Ripple, Stellar, Tendermint</p>
+          <p class="fs-6 lh-1">Bitcoin, ChainLink, Cosmos SDK, Custom, Ethereum, PIVX, Ripple, Stellar, Tendermint</p>
           <h4>Software:</h4>
-          <p>Arduino, Confluence, Git, Jenkins, JIRA, Linux, macOS, Notion, Windows</p>
+          <p class="fs-6 lh-1">Arduino, Confluence, Git, Jenkins, JIRA, Linux, macOS, Notion, Windows</p>
         </div>
       </div>
     </section>
